feat: User returns